resources/simple-apps/apps-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress-resource
spec:
  rules:
  - host: nginx.esteiradevops.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-main
          servicePort: 80
  - host: tea.nordsh.com
    http:
      paths:
      - backend:
          serviceName: tea-deploy
          servicePort: 80
  - host: coffee.nordsh.com.br
    http:
      paths:
      - backend:
          serviceName: coffee-deploy
          servicePort: 80
